--- a/pom.xml
+++ b/pom.xml
@@ -8,9 +8,11 @@
     <name>basic</name>
     <properties>
         <mule.version>3.4.0</mule.version>
-
-        <spring.version>3.0.3.RELEASE</spring.version>
-
+        <spring.version>3.2.8.RELEASE</spring.version>
+        <commons.cli.version>1.0</commons.cli.version>
+        <commons.lang.version>2.6</commons.lang.version>
+        <mock.ftp.server.version>2.4</mock.ftp.server.version>
+        <httpclient.version>4.3.3</httpclient.version>
     </properties>
 
 
@@ -62,12 +64,12 @@
         <dependency>
             <groupId>commons-cli</groupId>
             <artifactId>commons-cli</artifactId>
-            <version>1.0</version>
+            <version>${commons.cli.version}</version>
         </dependency>
         <dependency>
             <groupId>commons-lang</groupId>
             <artifactId>commons-lang</artifactId>
-            <version>2.6</version>
+            <version>${commons.lang.version}</version>
         </dependency>
 
         <dependency>
@@ -84,13 +86,13 @@
         <dependency>
             <groupId>org.mockftpserver</groupId>
             <artifactId>MockFtpServer</artifactId>
-            <version>2.4</version>
+            <version>${mock.ftp.server.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpclient</artifactId>
-            <version>4.3.3</version>
+            <version>${httpclient.version}</version>
             <scope>test</scope>
         </dependency>
 
